Allow 201 response code